# anima_lora

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.ko.md  README.md  bench_plan.md  inference.py  install.ps1  install.sh  plan.md  problems.md  pyproject.toml  tasks.py  train.py
_archive/proposals/: dpdmd.md  easycontrol_repa_operating_point.md  repa_global_anchor.md  repa_v2_patchwise_pe_spatial.md
anima_lora/: __init__.py
archive/: toread.md
bench/: _anima.py
bench/autotune/: sweep.py
bench/byg/: grad_parity.py  y0_fidelity.py
bench/channel_stats/: analyze_lora_input_channels.py  cond_stream_profile.py  sigma_sensitivity_probe.py  turbo_rollout_profile.py
bench/chimera_expert_capacity/: run_bench.py
bench/cns/: calibrate.py  gamma_probe.py  plan.md
bench/dave/: README.md  derive_alpha_mask.py  eyeball.py  probe_dc_convergence.py  probe_mod_presence.py  probe_patch_imprint.py
bench/dcw/: sweep_buckets.py
bench/dpdmd/: caption_ranking_probe.py  probe_first_step_anchor.py
bench/dynamic_spectrum/: README.md  run_bench.py
bench/easycontrol/: pai_equivalence.py  step1p5_lse_equivalence.py  two_stream_smoke.py
bench/fa4_8warp/: bench_fwd.py  bwd_parity.py  plan.md  results.jsonl
bench/fera/: expressivity_analysis.py  probe_fei.py
bench/fera_artist/: probe_fei_artist.py  probe_fei_trajectory.py
bench/flair/: README.md  __init__.py  calibrate_lambda.py  operators.py  sanity_sr.py  solver.py
bench/fm_vr_headroom/: README.md  proposal.md  run_bench.py
bench/freetext/: README.md  before_stage2.md  probe_localization.py  stage1.py  stage1_localize.py  stage1_progress.md  stage2.py  stage2_report.md  stage2_sgmi.py
bench/ip_adapter/: INTEGRATION.md  plan.md
bench/lora_fp32_bottleneck/: precision_speed.py
bench/mod_guidance/: README.md  channel_attribution.py  text_jacobian.py
bench/oscar/: plan.md  probe_feature_space.py  report.md
bench/pe_cls_probe/: build_calib.py  discriminability.py
bench/pid/: README.md  fit_color_calib.py  stage1_vae_roundtrip.py
bench/postfix_inversion_bridge/: README.md
bench/reft/: INTEGRATION.md  plan.md
bench/repa/: compare_repa_ckpts.py  probe_dog_target.py  probe_layer_grad_conflict.py  probe_layer_sigma_cka.py  results.md
bench/router_targets/: analyze_router_target_leverage.py
bench/sigma_reshape/: README.md  er_sde_results.md  run_bench.py
bench/smc_cfg/: measure_error_magnitude.py
bench/soft_tokens_contrastive/: _softrank.py  gradient_quality_probe.py  renoise_probe.py  repr_dispersive_probe.py  reward_premise_probe.py
bench/spd/: measure_autoregression.py  measure_latent_spectrum.py  per_artist_spectrum.py  plan.md  probe_compose.py  probe_lowres_denoise.py  probe_onpolicy_handoff.py  probe_teacher_lowres.py
bench/spectral_guidance/: probe_spectrum.py
bench/spectrum_pareto/: capture_features.py  proposal.md
bench/timestep_mask/: column_utilization.py  learned_rank.py
bench/turbo_repa/: probe_alignment_drift.py
bench/vr_grad_diagnostics/: run_bench.py
configs/: base.toml  preprocess.toml  sam_mask.yaml
configs/datasets/: byg_smoke.toml  colorize.toml  easycontrol.toml
configs/easycontrol/: README.md  colorize.toml  easycontrol.toml  near_twins.toml  sanitize.toml
configs/gui-methods/: chimera_hydra.toml  colorize.toml  easycontrol.toml  hydralora-8gb.toml  hydralora.toml  lora-8gb.toml  lora.toml  soft_tokens.toml  tlora-8gb.toml  tlora.toml  tlora_ortho_reft.toml
configs/methods/: apex.toml  byg.toml  chimera.toml  colorize.toml  easycontrol.toml  fera.toml  lora.toml  postfix.toml  soft_tokens.toml  spd.toml  turbo.toml
custom_nodes/comfyui-anima-directedit/: README.md  __init__.py  nodes.py  pyproject.toml
custom_nodes/comfyui-anima-pid/: README.md  __init__.py  nodes.py  pid_core.py  pyproject.toml
docs/: README.md  multi_model_support.md
docs/guidelines/: 指南书.md  (+7 more)
easycontrol_adapters/: ADAPTER_GUIDE.cn.md  ADAPTER_GUIDE.ja.md  ADAPTER_GUIDE.ko.md  ADAPTER_GUIDE.md
examples/: 01_generate.py  02_config_and_train.py  02_generate_with_lora.py  03_generate_with_correction.py  04_load_models.py  04_train_lora.py  05_load_models.py  05_vae_and_dataset.py  06_frozen_dit_training_build.py  07_stack_ortho_init_tlora.py  08_generate_with_correction.py  README.md  suggestions.md
gui/: CLAUDE.md  __init__.py  _job_mixin.py  _paths.py  app.py  config_io.py  config_tab.py  daemon.py  debug_report.py  dialogs.py  discovery.py  explanations.py  gui_settings.json  i18n.py  image_tab.py  preprocess_tab.py  progress.py  system_dialog.py  tensorboard.py  theme.py  validation.py  widgets.py
networks/: CLAUDE.md  __init__.py  attention_dispatch.py  attn_fuse.py  dcw.py  lora_save.py  lora_utils.py  protocol.py  spd.py  spectrum.py
preprocess/: cache_latents.py  cache_pe_encoder.py  cache_text_embeddings.py
scripts/: check_docs.py  comfy_batch.py  distill_mod_prep.py  distill_modulation.py  distill_spd.py  distill_turbo.py  edit.py  inference_server.py  merge_to_dit.py  repa_progress_report.py  sync_vendor.py  update.py
tests/: conftest.py  test_adapter_dispatch.py  test_adapter_protocol.py  test_anima_tagger_dual_encoder.py  test_anima_tagger_packed_cache.py  test_anima_tagger_pe_cache_batching.py  test_chimera_expert_capacity.py  test_chimera_node_loader.py  test_chimera_router_stats.py  test_colorize_caption.py  test_compile_pool_helper.py  test_cond_diff_loss.py  test_config.py  test_daemon.py  test_directedit_v_injection.py  test_doc_refs.py  test_feature_tap.py  test_fera_inline_prep.py  test_flair_edit.py  test_folder_repeats.py  test_freetext_stage2.py  test_generation_request.py  test_global_router.py  test_grouping_grid_match.py  test_gui_launch_speed.py  test_gui_preprocess_tab.py  test_gui_validation_split.py  test_hang_guards.py  test_hydra_sigma_band.py  test_liveness.py  test_lora_custom_autograd.py  test_lora_dtype_policy.py  test_lora_module_equivalence.py  test_method_network_lifecycle.py  test_multiscale_buckets.py  test_nested_paths.py  test_network_cfg.py  test_network_registry.py  test_preprocess_dataset.py  test_progress_sink.py  (+14 more)
(+290 files in other folders)
