[project]
name = "anima-lora"
version = "0.1.0"
description = "Standalone Anima LoRA training pipeline"
requires-python = "==3.13.*"
dependencies = [
    # Core ML.
    "torch>=2.12.0,<2.13",
    "torchvision>=0.27.0,<0.28",
    "accelerate>=1.13.0",
    "transformers>=5.10.1",
    "diffusers>=0.37.0",
    "einops>=0.7.0",
    # Optimizers
    "pytorch-optimizer>=3.9.0",
    "prodigyopt>=1.1.2",
    # Data & Config
    "toml>=0.10.2",
    "tomlkit>=0.13",  # style-preserving TOML for the GUI's sectioned distill-config editor
    "voluptuous>=0.15.2",
    "safetensors>=0.7.0",
    "imagesize>=1.4.1",
    # Text processing
    "sentencepiece>=0.2.1",
    "huggingface-hub>=1.9.0",
    # Monitoring & Utilities
    "tensorboard",
    "rich>=14.0.0",
    "tqdm",
    "numpy>=2.0.0",
    "Pillow",
    "psutil",
    "opencv-python>=4.11.0.86",
    # Masking
    "pyyaml",
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
    "segmentation-models-pytorch>=0.3.4",
    "albumentations>=1.4.0",
    "packaging",
    "pycocotools>=2.0.11",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.17/flash_attn-2.8.3+cu132torch2.12-cp313-cp313-linux_x86_64.whl ; sys_platform == 'linux'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.25/flash_attn-2.8.3+cu132torch2.12-cp313-cp313-win_amd64.whl ; sys_platform == 'win32'",
    "triton-windows>=3.7.0,<3.8.0 ; sys_platform == 'win32'",
    "pyside6>=6.11.0",
    "ruff>=0.15.9",
    "matplotlib",
    "torchsde>=0.2.6",
    "uv>=0.11.7",
    "yarl>=1.23.0",
    "spandrel>=0.4.2",
    "sqlalchemy>=2.1.0b2",
    "aiohttp>=3.13.5",
    "comfy-cli>=1.10.3",
    "comfy-aimdo>=0.4.9",
    "av>=17.0.1",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.0",
    "kornia>=0.8.2",
    "comfy-kitchen>=0.2.10",
    "simpleeval>=1.0.7",
    "pytest>=9.0.3",
    "blake3>=1.0.8",
    "softtorch>=0.1.1",
    "controlnet-aux>=0.0.10",
    "scikit-learn>=1.9.0",
    "datasets>=4.8.5",
]

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
]

[tool.uv]
index-strategy = "unsafe-best-match"
# Both wheels are looked up from these indexes — the version pin in
# `dependencies` (active vs. commented) decides which one resolves.
extra-index-url = [
    "https://download.pytorch.org/whl/cu132"
]
prerelease = "allow"
override-dependencies = ["numpy>=2.0.0"]

[tool.pyright]
extraPaths = ["."]
exclude = ["archive", "**/__pycache__"]
reportMissingImports = "none"
reportPrivateImportUsage = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportOptionalOperand = "none"
reportCallIssue = "none"
reportOperatorIssue = "none"
reportPossiblyUnboundVariable = "none"
reportGeneralTypeIssues = "none"
reportIncompatibleMethodOverride = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportOptionalIterable = "none"
reportOptionalCall = "none"
reportReturnType = "none"
reportAssignmentType = "none"
reportIndexIssue = "none"
reportRedeclaration = "none"
reportFunctionMemberAccess = "none"
reportIncompatibleVariableOverride = "none"
reportInvalidStringEscapeSequence = "none"
reportUnsupportedDunderAll = "none"

[tool.ruff.lint.per-file-ignores]
# `train.py` / `inference.py` call `install_no_window_default()` at module scope
# *before* `import torch` (Windows: suppress per-kernel ptxas/cl console flashes
# from torch.compile + Triton — must run before any subprocess spawn). That lone
# pre-import statement makes every following import trip E402; the ordering is
# deliberate, so silence E402 for these two entry points rather than scattering
# ~36 per-line `# noqa: E402` comments.
"train.py" = ["E402"]
"inference.py" = ["E402"]

# Expose the importable package trees so `pip install` / `uv sync` makes
# `import anima_lora` (the programmatic front door) + `import library` /
# `networks` resolve without the repo root on sys.path. The tooling trees
# (`bench` / `scripts` / `preprocess`) are also installed so cross-tree imports
# (`from bench._common import …`, `from scripts.dcw.haar import …`) resolve via
# the editable finder instead of per-file `sys.path.insert` shims — and any tool
# runs as `python -m bench.spd.foo`. `gui` stays CLI-only (not importable).
[tool.setuptools.packages.find]
include = ["anima_lora*", "library*", "networks*", "bench*", "scripts*", "preprocess*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "markdownify",
]
